--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
+
+
 <html lang="en">
+
+
 
   <head>
 
@@ -260,7 +264,7 @@
 
             <div class="client__card">
 
-              <img src="assets/client-1.jpg" alt="client" />
+              <img src="assets/SAVE_20250217_141313.jpg" alt="client" />
 
               <p>
 
