--- a/index.html
+++ b/index.html
@@ -181,11 +181,15 @@
     const letterText = `
 
 
-I cannot find the right words to express how much you mean to me. Every time I think of you, I feel my heart race with joy. Your presence fills my world with light, and your laughter is the melody of my life.
 
-You are my everything. I want to walk beside you, share every moment, and build memories together. With you, I feel whole.
+তোমার কথা ভাবলেই আমার হৃদয়টা কেমন যেন ব্যাকুল হয়ে ওঠে। তোমার এক ঝলক হাসি যেন আমার সমস্ত দুঃখ ভুলিয়ে দেয়। তুমি আমার জীবনের সবচেয়ে সুন্দর উপহার, যাকে পেয়ে আমি নিজেকে পৃথিবীর সবচেয়ে ভাগ্যবান মনে করি।
 
-Your Love`;
+তোমার সাথে কাটানো প্রতিটি মুহূর্ত আমার হৃদয়ে অমূল্য স্মৃতি হয়ে জায়গা করে নিয়েছে। আমি চিরকাল তোমার পাশে থাকতে চাই, তোমার হাত ধরে জীবন চলার পথে হেঁটে যেতে চাই।
+
+তুমি আমার ভালোবাসা, আমার প্রেরণা, আমার স্বপ্ন। আমি তোমাকে ভালবাসি হৃদয়ের সবটুকু দিয়ে, আজীবনের জন্য।
+
+শুধু তোমার,
+তোমার ভালোবাসা`;
 
     const letterBox = document.getElementById("letter");
     const startBtn = document.getElementById("start-btn");
