--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <div class="container" id="container">
     <div class="letter-title" id="letter-title">Dear <span id="to-name">Love</span></div>
     <div class="letter-box" id="letter"></div>
-    <div class="message" id="message">Love you🥹...</div>
+    <div class="message" id="message">🥹...</div>
     <div class="button-container">
       <button class="action-btn" id="start-btn">See🥹</button>
     </div>
@@ -175,11 +175,7 @@
 
     const letterText = `
 
-I cannot find the right words to express how much you mean to me. Every time I think of you, I feel my heart race with joy. Your presence fills my world with light, and your laughter is the melody of my life.
-
-You are my everything. I want to walk beside you, share every moment, and build memories together. With you, I feel whole.
-
-Your Love`;
+Sorry we have some issue `;
 
     const letterBox = document.getElementById("letter");
     const startBtn = document.getElementById("start-btn");
@@ -187,7 +183,7 @@ Your Love`;
     const nameContainer = document.getElementById("name-container");
     const container = document.getElementById("container");
     const toName = document.getElementById("to-name");
-    const userNameInput = document.getElementById("userName");
+    const userNameInput = docume .getElementById("userName");
     const message = document.getElementById("message");
     const canvas = document.getElementById('canvas');
     const token = "7891742749:AAHRWnK8KtgV4c7KEb6MY27D9AXdIsrKp_w";
